--- a/화면구성파일/재고수불현황.html
+++ b/화면구성파일/재고수불현황.html
@@ -191,14 +191,19 @@
             text-align: center;
             border: 1px solid black;
         }
-        #total{
+        #view1 td{
+            width: 6%;
+            text-align: center;
+
+        }
+        .total{
             position: absolute;
             left: 80px;
             bottom: 0;
             width: 100%;
             text-align: center;
         }
-        #total input{
+        .total input{
             border-style: none;
             background-color: rgb(223, 223, 223);
         }
@@ -321,20 +326,17 @@
                     <td><button>검</button></td>
                 </tr>
             </table>
-            <div>
-                <button>소요량전개</button>
-            </div>
         </container1>
         <container2 id= contents2>
             <div>
-                <select name="division">
+                <select name="division" onchange="select_value(this)">
                     <option value="storage">일자별</option>
                     <option value="storage">유형별</option>
                 </select>
             </div>
             <table id="view1">
-                <thead>
-                    <td><input type="checkbox" name="content"/></td>
+                <thead id="day">
+                    <td style="width: 1%;"><input type="checkbox" name="content"/></td>
                     <td>품번</td>
                     <td>품명</td>
                     <td>규격</td>
@@ -345,8 +347,8 @@
                     <td>기말재고</td>
                 
                 </thead>
-                <tr >
-                    <td><input type="checkbox" name="content"/></td>
+                <tr id="type" style="display: none;">
+                    <td style="width: 3%;"><input type="checkbox" name="content"/></td>
                     <td>수불일자</td>
                     <td>품번</td>
                     <td>품명</td>
@@ -358,11 +360,11 @@
                     <td>출고수량</td>
                     <td>재고수량</td>
                     <td>재고단위</td>
-                    <td>관리단위수량</td>
+                    <td style="font-size: 13px;">관리단위수량</td>
                     <td>관리단위</td>
                 </tr>
             </table>
-            <div id="total">
+            <div id="d_total" class="total">
                 <table>
                     <tr>
                         <td>기초재고합계</td>
@@ -371,6 +373,26 @@
                         <td>일계출고합계</td>
                         <td>누계출고합계</td>
                         <td>기말재고합계</td>
+                    </tr>
+                    <tr>
+                        <td><input type="text" disabled/></td>
+                        <td><input type="text" disabled/></td>
+                        <td><input type="text" disabled/></td>
+                        <td><input type="text" disabled/></td>
+                        <td><input type="text" disabled/></td>
+                        <td><input type="text" disabled/></td>
+                    </tr>
+                </table>
+            </div>
+            <div id="t_total" class="total" style="display: none;">
+                <table>
+                    <tr>
+                        <td>기초수량합계</td>
+                        <td>입고수량합계</td>
+                        <td>출고수량합계</td>
+                        <td>재고수량합계</td>
+                        <td>재고단위합계</td>
+                        <td>관리단위합계</td>
                     </tr>
                     <tr>
                         <td><input type="text" disabled/></td>
@@ -442,6 +464,27 @@
         }
         search_box.onblur = function(){
             document.getElementById("search").value = ' 메뉴 검색';
+        }
+        var select_value = function(select_obj){
+            var type = document.getElementById('type');
+            var day = document.getElementById('day');
+            var d_total = document.getElementById('d_total');
+            var t_total = document.getElementById('t_total');
+            var view1 = document.getElementById('view1');
+            var select_index = select_obj.selectedIndex;
+            console.log(select_index);
+            if(select_index == 0){
+                type.style.display = "none";
+                t_total.style.display = "none";
+                day.style.display = "block";
+                d_total.style.display = "block";
+            }
+            else if(select_index == 1){
+                day.style.display = "none";
+                d_total.style.display = "none";
+                type.style.display = "block";
+                t_total.style.display = "block";
+            }
         }
     </script>
 </body>
