(수정) 링크삭제

--- a/화면구성파일/입고처리(국내발주).디자인버전.html
+++ b/화면구성파일/입고처리(국내발주).디자인버전.html
@@ -387,87 +387,87 @@
                     <li><a href="#"  id="side1">회사등록정보</a>
                         <ul id="l_sub1">
                             <li><a href="회사등록.html">회사등록</a></li>
-                            <li><a href="사업장등록.html">사업장등록</a></li>
-                            <li><a href="부서등록.html">부서등록</a></li>
+                            <li><a href="#">사업장등록</a></li>
+                            <li><a href="#">부서등록</a></li>
                             
                         </ul></li>
                     <li><a href="#" id="side2">기초정보관리</a>
                         <ul id="l_sub2">
-                            <li><a href="일반거래처등록.html">일반거래처등록</a></li>
-                            <li><a href="품목군등록.html">품목군등록</a></li>
-                            <li><a href="품목등록.html">품목등록</a></li>
+                            <li><a href="#">일반거래처등록</a></li>
+                            <li><a href="#">품목군등록</a></li>
+                            <li><a href="#">품목등록</a></li>
                             <li><a href="#">창고/공정/외주공정등록</a></li>
-                            <li><a href="물류관리내역등록.html">물류관리내역등록</a></li>
-                            <li><a href="물류실적담당자등록_품목.html">물류실적담당자등록</a></li> <!--물류실적담당자등록_거래처 넣어야됨-->
-                            <li><a href="검사유형등록.html">검사유형등록</a></li>
-                            <li><a href="SET구성품등록.html">SET구성품등록</a></li>
+                            <li><a href="#">물류관리내역등록</a></li>
+                            <li><a href="#">물류실적담당자등록</a></li>
+                            <li><a href="#">검사유형등록</a></li>
+                            <li><a href="#">SET구성품등록</a></li>
                         </ul></li>
                     <li><a href="#" id="side3">영업관리</a>
                         <ul id="l_sub3">
-                            <li><a href="판매계획등록_고객별상세.html">판매계획등록</a></li>
-                            <li><a href="견적등록.html">견적등록</a></li>
-                            <li><a href="수주등록.html">수주등록</a></li>
-                            <li><a href="출고의뢰등록.html">출고의뢰등록</a></li>
-                            <li><a href="출고처리.html">출고처리</a></li>
-                            <li><a href="거래명세서.html">거래명세서발행</a></li>
+                            <li><a href="#">판매계획등록</a></li>
+                            <li><a href="#">견적등록</a></li>
+                            <li><a href="#">수주등록</a></li>
+                            <li><a href="#">출고의뢰등록</a></li>
+                            <li><a href="#">출고처리</a></li>
+                            <li><a href="#">거래명세서발행</a></li>
                         </ul></li>
                     <li><a href="#" id="side4">영업현황</a>
                         <ul id="l_sub4">
-                            <li><a href="견적현황.html">견적현황</a></li>
-                            <li><a href="판매계획현황.html">판매계획현황</a></li>
-                            <li><a href="판매계획대비출고현황.html">판매계획대비출고현황</a></li>
-                            <li><a href="견적대비수주현황.html">견적대비수주현황</a></li>
-                            <li><a href="수주현황.html">수주현황</a></li>
-                            <li><a href="수주대비출고현황.html">수주대비출고현황</a></li>
-                            <li><a href="출고현황.html">출고현황</a></li>
-                            <li><a href="출고반품현황.html">출고반품현황</a></li>
+                            <li><a href="#">견적현황</a></li>
+                            <li><a href="#">판매계획현황</a></li>
+                            <li><a href="#">판매계획대비출고현황</a></li>
+                            <li><a href="#">견적대비수주현황</a></li>
+                            <li><a href="#">수주현황</a></li>
+                            <li><a href="#">수주대비출고현황</a></li>
+                            <li><a href="#">출고현황</a></li>
+                            <li><a href="#">출고반품현황</a></li>
                         </ul></li>
                     <li><a href="#" id="side5">구매관리</a>
                         <ul id="l_sub5">
-                            <li><a href="주계획작성.html">주계획작성</a></li>
-                            <li><a href="소요량전개.html">소요량전개</a></li>
-                            <li><a href="청구등록.html">청구등록</a></li>
-                            <li><a href="발주등록.html">발주등록</a></li>
-                            <li><a href="입고의뢰등록.html">입고의뢰등록</a></li>
-                            <li><a href="입고검사등록.html">입고검사등록</a></li>
-                            <li><a href="입고처리(국내발주).디자인버전.html">입고처리</a></li>
-                            <li><a href="발주마감처리.html">발주마감처리</a></li>
-                            <li><a href="매입마감(국내거래)ver2.html">매입마감</a></li>
+                            <li><a href="#">주계획작성</a></li>
+                            <li><a href="#">소요량전개</a></li>
+                            <li><a href="#">청구등록</a></li>
+                            <li><a href="#">발주등록</a></li>
+                            <li><a href="#">입고의뢰등록</a></li>
+                            <li><a href="#">입고검사등록</a></li>
+                            <li><a href="#">입고처리</a></li>
+                            <li><a href="#">발주마감처리</a></li>
+                            <li><a href="#">매입마감</a></li>
                         </ul></li>
                     <li><a href="#" id="side6">재고관리</a>
                         <ul id="l_sub6">
-                            <li><a href="재고이동등록(창고).html">재고이동등록(창고)</a></li>
-                            <li><a href="재고이동등록(사업장).html">재고이동등록(사업장)</a></li>
-                            <li><a href="기초재고_재고조정등록.html">기초재고/재고조정등록</a></li>
-                            <li><a href="SET품수불조정등록.html">SET품수불조정등록</a></li>
-                            <li><a href="기초재고_재고조정현황.html">기초재고/재고조정현황</a></li>
+                            <li><a href="#">재고이동등록(창고)</a></li>
+                            <li><a href="#">재고이동등록(사업장)</a></li>
+                            <li><a href="#">기초재고/재고조정등록</a></li>
+                            <li><a href="#">SET품수불조정등록</a></li>
+                            <li><a href="#">기초재고/재고조정현황</a></li>
                         </ul></li>
                     <li><a href="#" id="side7">재고수불현황</a>
                         <ul id="l_sub7">
-                            <li><a href="현재고현황(전사,사업장).html">현재고현황</a></li>
-                            <li><a href="재고수불현황.html">재고수불현황(일자,유형별)</a></li>
-                            <li><a href="현재고(LOT)현황(전사,사업장).html">현재고(LOT)현황</a></li> <!--현재고현황(창고,장소) 넣어야됨-->
+                            <li><a href="#">현재고현황</a></li>
+                            <li><a href="#">재고수불현황(일자,유형별)</a></li>
+                            <li><a href="#">현재고(LOT)현황</a></li>
                         </ul></li>
                     <li><a href="#" id="side8">기초정보관리</a>
                         <ul id="l_sub8">
-                            <li><a href="품목단가등록.html">품목단가등록</a></li>
+                            <li><a href="#">품목단가등록</a></li>
                         </ul></li>
                     <li><a href="#" id="side9">생산관리</a>
                         <ul id="l_sub9">
-                            <li><a href="생산계획등록 수정.html">생산계획등록</a></li>
-                            <li><a href="작업지시등록 수정.html">작업지시등록</a></li>
-                            <li><a href="작업지시확정 수정.html">작업지시확정</a></li>
-                            <li><a href="생산자재출고 수정.html">생산자재출고</a></li>
-                            <li><a href="작업실적등록 수정.html">작업실적등록</a></li>
-                            <li><a href="작업지시마감처리 수정.html">작업지시마감처리</a></li>
+                            <li><a href="#">생산계획등록</a></li>
+                            <li><a href="#">작업지시등록</a></li>
+                            <li><a href="#">작업지시확정</a></li>
+                            <li><a href="#">생산자재출고</a></li>
+                            <li><a href="#">작업실적등록</a></li>
+                            <li><a href="#">작업지시마감처리</a></li>
                         </ul></li>
                     <li><a href="#" id="side10">외주관리</a>
                         <ul id="l_sub10">
-                            <li><a href="외주발주등록.html">외주발주등록</a></li>
-                            <li><a href="외주발주확정.html">외주발주확정</a></li>
-                            <li><a href="외주자재출고.html">외주자재출고</a></li>
-                            <li><a href="외주실적등록.html">외주실적등록</a></li>
-                            <li><a href="외주마감.html">외주마감</a></li>
+                            <li><a href="#">외주발주등록</a></li>
+                            <li><a href="#">외주발주확정</a></li>
+                            <li><a href="#">외주자재출고</a></li>
+                            <li><a href="#">외주실적등록</a></li>
+                            <li><a href="#">외주마감</a></li>
                         </ul></li>
                 </ul>
             </div>
