(수정) 1.시스템관리파트 사이드메뉴 수정함

--- a/화면구성파일/입고처리(국내발주).디자인버전.html
+++ b/화면구성파일/입고처리(국내발주).디자인버전.html
@@ -386,7 +386,7 @@
                 <ul id="lnb">
                     <li><a href="#"  id="side1">회사등록정보</a>
                         <ul id="l_sub1">
-                            <li><a href="회사등록.html">회사등록</a></li>
+                            <li><a href="#">회사등록</a></li>
                             <li><a href="#">사업장등록</a></li>
                             <li><a href="#">부서등록</a></li>
                             
