--- a/화면구성파일/품목군등록.html
+++ b/화면구성파일/품목군등록.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>품목군등록</title>
     <style>
         *{
             margin: 0;
@@ -329,33 +329,23 @@
         <aside id = sidemenu>
             <div id="s_nav">
                 <ul id="lnb">
-                    <li><a href="#"  id="side1">물류1</a>
+                    <li><a href="#"  id="side1">회사등록정보</a>
                         <ul id="l_sub1">
-                            <li><a href="#">물류1-1</a></li>
-                            <li><a href="#">물류1-2</a></li>
-                            <li><a href="#">물류1-3</a></li>
-                            <li><a href="#">물류1-4</a></li>
+                            <li><a href="#">회사등록</a></li>
+                            <li><a href="#">사업장등록</a></li>
+                            <li><a href="#">부서등록</a></li>
+                            
                         </ul></li>
-                    <li><a href="#" id="side2">물류2</a>
+                    <li><a href="#" id="side2">기초정보관리</a>
                         <ul id="l_sub2">
-                            <li><a href="#">물류1-1</a></li>
-                            <li><a href="#">물류1-2</a></li>
-                            <li><a href="#">물류1-3</a></li>
-                            <li><a href="#">물류1-4</a></li>
-                        </ul></li>
-                    <li><a href="#" id="side3">생산1</a>
-                        <ul id="l_sub3">
-                            <li><a href="#">물류1-1</a></li>
-                            <li><a href="#">물류1-2</a></li>
-                            <li><a href="#">물류1-3</a></li>
-                            <li><a href="#">물류1-4</a></li>
-                        </ul></li>
-                    <li><a href="#" id="side4">생산2</a>
-                        <ul id="l_sub4">
-                            <li><a href="#">물류1-1</a></li>
-                            <li><a href="#">물류1-2</a></li>
-                            <li><a href="#">물류1-3</a></li>
-                            <li><a href="#">물류1-4</a></li>
+                            <li><a href="#">일반거래처등록</a></li>
+                            <li><a href="#">품목군등록</a></li>
+                            <li><a href="#">품목등록</a></li>
+                            <li><a href="#">창고/공정/외주공정등록</a></li>
+                            <li><a href="#">물류관리내역등록</a></li>
+                            <li><a href="#">물류실적담당자등록</a></li>
+                            <li><a href="#">검사유형등록</a></li>
+                            <li><a href="#">SET구성품등록</a></li>
                         </ul></li>
                 </ul>
             </div>
