사이드메뉴 및 탭구현 정우준

--- a/화면구성파일/발주마감처리.html
+++ b/화면구성파일/발주마감처리.html
@@ -253,33 +253,35 @@
         <aside id = sidemenu>
             <div id="s_nav">
                 <ul id="lnb">
-                    <li><a href="#"  id="side1">물류1</a>
+                    <li><a href="#"  id="side1">구매관리</a>
                         <ul id="l_sub1">
-                            <li><a href="#">물류1-1</a></li>
-                            <li><a href="#">물류1-2</a></li>
-                            <li><a href="#">물류1-3</a></li>
-                            <li><a href="#">물류1-4</a></li>
+                            <li><a href="#">주계획작성</a></li>
+                            <li><a href="#">소요량전개</a></li>
+                            <li><a href="#">청구등록</a></li>
+                            <li><a href="#">발주등록</a></li>
+                            <li><a href="#">입고의뢰등록</a></li>
+                            <li><a href="#">입고검사등록</a></li>
+                            <li><a href="#">입고처리</a></li>
+                            <li><a href="#">발주마감처리</a></li>
+                            <li><a href="#">매입마감</a></li>
                         </ul></li>
-                    <li><a href="#" id="side2">물류2</a>
+                    <li><a href="#" id="side2">재고관리</a>
                         <ul id="l_sub2">
-                            <li><a href="#">물류1-1</a></li>
-                            <li><a href="#">물류1-2</a></li>
-                            <li><a href="#">물류1-3</a></li>
-                            <li><a href="#">물류1-4</a></li>
+                            <li><a href="#">재고이동등록(창고)</a></li>
+                            <li><a href="#">재고이동등록(사업장)</a></li>
+                            <li><a href="#">기초재고/재고조정등록</a></li>
+                            <li><a href="#">SET품수불조정등록</a></li>
+                            <li><a href="#">기초재고/재고조정현황</a></li>
                         </ul></li>
-                    <li><a href="#" id="side3">생산1</a>
+                    <li><a href="#" id="side3">재고수불현황</a>
                         <ul id="l_sub3">
-                            <li><a href="#">물류1-1</a></li>
-                            <li><a href="#">물류1-2</a></li>
-                            <li><a href="#">물류1-3</a></li>
-                            <li><a href="#">물류1-4</a></li>
+                            <li><a href="#">현재고현황</a></li>
+                            <li><a href="#">재고수불현황(일자,유형별)</a></li>
+                            <li><a href="#">현재고(LOT)현황</a></li>
                         </ul></li>
-                    <li><a href="#" id="side4">생산2</a>
+                    <li><a href="#" id="side4">기초정보관리</a>
                         <ul id="l_sub4">
-                            <li><a href="#">물류1-1</a></li>
-                            <li><a href="#">물류1-2</a></li>
-                            <li><a href="#">물류1-3</a></li>
-                            <li><a href="#">물류1-4</a></li>
+                            <li><a href="#">품목단가등록</a></li>
                         </ul></li>
                 </ul>
             </div>
