--- a/화면구성파일/수주대비출고현황.html
+++ b/화면구성파일/수주대비출고현황.html
@@ -275,33 +275,25 @@
         <aside id = sidemenu>
             <div id="s_nav">
                 <ul id="lnb">
-                    <li><a href="#"  id="side1">물류1</a>
+                    <li><a href="#" id="side1">영업관리</a>
                         <ul id="l_sub1">
-                            <li><a href="#">물류1-1</a></li>
-                            <li><a href="#">물류1-2</a></li>
-                            <li><a href="#">물류1-3</a></li>
-                            <li><a href="#">물류1-4</a></li>
+                            <li><a href="#">판매계획등록</a></li>
+                            <li><a href="#">견적등록</a></li>
+                            <li><a href="#">수주등록</a></li>
+                            <li><a href="#">출고의뢰등록</a></li>
+                            <li><a href="#">출고처리</a></li>
+                            <li><a href="#">거래명세서발행</a></li>
                         </ul></li>
-                    <li><a href="#" id="side2">물류2</a>
+                    <li><a href="#" id="side2">영업현황</a>
                         <ul id="l_sub2">
-                            <li><a href="#">물류1-1</a></li>
-                            <li><a href="#">물류1-2</a></li>
-                            <li><a href="#">물류1-3</a></li>
-                            <li><a href="#">물류1-4</a></li>
-                        </ul></li>
-                    <li><a href="#" id="side3">생산1</a>
-                        <ul id="l_sub3">
-                            <li><a href="#">물류1-1</a></li>
-                            <li><a href="#">물류1-2</a></li>
-                            <li><a href="#">물류1-3</a></li>
-                            <li><a href="#">물류1-4</a></li>
-                        </ul></li>
-                    <li><a href="#" id="side4">생산2</a>
-                        <ul id="l_sub4">
-                            <li><a href="#">물류1-1</a></li>
-                            <li><a href="#">물류1-2</a></li>
-                            <li><a href="#">물류1-3</a></li>
-                            <li><a href="#">물류1-4</a></li>
+                            <li><a href="#">견적현황</a></li>
+                            <li><a href="#">판매계획현황</a></li>
+                            <li><a href="#">판매계획대비출고현황</a></li>
+                            <li><a href="#">견적대비수주현황</a></li>
+                            <li><a href="#">수주현황</a></li>
+                            <li><a href="#">수주대비출고현황</a></li>
+                            <li><a href="#">출고현황</a></li>
+                            <li><a href="#">출고반품현황</a></li>
                         </ul></li>
                 </ul>
             </div>
