--- a/화면구성파일/회사등록.html
+++ b/화면구성파일/회사등록.html
@@ -183,6 +183,7 @@
         #table1 {
             text-align: center; width: 100%; padding-top: 20px;
             padding-right: 10%; padding-left: 2px;
+            overflow: hidden;
         }
         #table2 {
             width: 100%; padding-top: 20px; padding-left: 50px; text-align: left;
